minor: core doc fix

--- a/docs/templates/default/tags/html/core.erb
+++ b/docs/templates/default/tags/html/core.erb
@@ -2,7 +2,7 @@
   <h3>Core docs:</h3>
   <ul class="see">
     <% for tag in object.tags(:core) %>
-      <li><%= linkify('http://dochub.mongodb.org/core/' + tag.name, tag.text || tag.name.capitalize) %></li>
+      <li><a href='<%= "http://dochub.mongodb.org/core/#{tag.name}" %>' name='<%= tag.text %>'><%= tag.name.capitalize %></a></li>
     <% end %>
   </ul>
 <% end %>
